feat: added skills and projects, added styles and images of the projects

--- a/Banasihan_exer2.html
+++ b/Banasihan_exer2.html
@@ -46,10 +46,50 @@
         <div class="sp">
             <div id="#skills">
                 <h2 id="skills-title">Skills</h2>
+                <p>• Fluent in English and Filipino</p>
+                <p><strong>• Programming Languages:</strong> Python, Java, JavaScript, and C</p>
+                <p><strong>• Frontend:</strong> JavaFX</p>
+                <p>• Proficient in Microsoft Office</p>
+                <p>• Proficient in Google Docs, Forms, and Sheets</p>
             </div>
     
             <div id="#projects">
                 <h2 id="projects-title">Projects</h2>
+                <div class="proj">
+                    <h3>"Type the Pattern" Game</h3>
+                    <img class="proj-image" src="./proj1.png">
+                    <p>Players must remember and write a randomly generated 
+                        character pattern in this memory-based terminal game. 
+                        With every right response, the pattern gets longer.</p>
+                </div>
+                <div class="proj">
+                    <h3>Flight Passenger Management System</h3>
+                    <img class="proj-image" src="./proj2.png">
+                    <p>This project is a program that manages airline flight 
+                        schedules and passenger reservations. Reservations, 
+                        passenger data, and flight records are all handled 
+                        by the system.</p>
+                </div>
+                <div class="proj">
+                    <h3>Super Auto Pets-Inspired Game</h3>
+                    <img class="proj-image" src="./proj3.jpg">
+                    <p>In this JavaFX-based strategy game, players build teams 
+                        of pets with special skills and engage in combat. It 
+                        has several game sceneries; menu, about the game, the 
+                        developers, game stage, and winning screen. There is a 
+                        store system for purchasing and selling pets. The game 
+                        uses abstract classes, encapsulation, and inheritance 
+                        in accordance with OOP concepts.</p>
+                </div>
+                <div class="proj">
+                    <h3>Diet Problem Solver</h3>
+                    <img class="proj-image" src="./proj4.png">
+                    <p>The Diet Problem Solver determines the most cost-effective 
+                        and nutritious food combination to satisfy daily dietary 
+                        needs. In order to minimize expenses while meeting calorie, 
+                        vitamin, mineral, fat, sodium, and cholesterol restrictions, 
+                        it formulates the problem as a linear programming model.</p>
+                </div>
             </div>
         </div>
         
