fix: anchor buttons

--- a/Banasihan_exer2.html
+++ b/Banasihan_exer2.html
@@ -16,8 +16,8 @@
             <p>Hi! I'm Angela. A frontend software engineer who aims to 
                 create creative and responsive websites.</p>
             <div class="buttons">
-                <a href="skills" class="button">Skills</a>
-                <a href="projects" class="button">Projects</a>
+                <a href="#skills" class="button">Skills</a>
+                <a href="#projects" class="button">Projects</a>
             </div>
         </div>
     </div>
